@@ -1,3 +1,14 @@
+2009-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Minor `slr' improvement.
+	
+	* tools/lib/r-host/run.sh,
+	* tools/lib/r-mtalpha-sim/run.sh.in,	
+	* tools/lib/r-mtsparc-sim/run.sh.in: Prefix $RUNNER_PREFIX to
+	command lines, to allow e.g. "time" to be used on programs.
+	
+	* tools/bin/slr.in: Document it.
+
 2009-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Make `slc' look more like GCC's front-end.
